# libdk

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  index.html  readme.md
docs/: dki.md  dkrules.md  terminology.md
examples/wsobserver-frontend/: cards.css  cards.js  dk_playspace.js  dki_ws.js  dki_ws_observer.js  dki_ws_player.js  index.html  style.css  wsobserver.html  wsplayer.html
include/doppelkopf/: action.h  card.h  doppelkopf.h  gamemode.h  gamemodes.h  observer.h  pattern.h  player.h  state.h
include/doppelkopf/interface/: command.h  dki_stream.h
src/: consoleplayer.h  consoleui.h  main.cpp  randomplayer.h  wsobserver.h  wsobservermanager.h  wsplayer.h
src/doppelkopf/: action.cpp  doppelkopf.cpp  gamemode.cpp  pattern.cpp  state.cpp
src/doppelkopf/interface/: command.cpp  dki_stream.cpp
src/interfaces/websocket/: wsmanager.cpp  wsmanager.h  wsobserver.cpp  wsobserver.h  wsobservermanager.cpp  wsobservermanager.h  wsplayer.cpp  wsplayer.h
tests/: CMakeLists.txt  gamemodes_test.cpp  main.cpp  state_test.cpp
